--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "author": "Your Name",
   "license": "MIT",
   "dependencies": {
-    "archiver": "^6.0.2",
-    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "fs-extra": "^11.1.1",
     "multer": "^1.4.5-lts.1",
-    "unzipper": "^0.10.14"
+    "fs-extra": "^11.1.1",
+    "cors": "^2.8.5",
+    "archiver": "^6.0.1",
+    "mime-types": "^2.1.35"
   }
 }
